{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7c05bff2-6e24-4f52-b09b-affc729ef851",
            "actions": [
                {
                    "name": "Player_Forward",
                    "type": "Button",
                    "id": "73675d90-bb08-4289-8f59-19aca8fee1cf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Backward",
                    "type": "Button",
                    "id": "a3bc96bd-4f5b-4565-9d3f-cb628739df65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Right",
                    "type": "Button",
                    "id": "7d1080e4-bf91-43e4-9799-84bc5e72fd6e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Left",
                    "type": "Button",
                    "id": "db229a4b-7a26-49ef-ad58-bae6dcdcf0b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Walk",
                    "type": "Button",
                    "id": "6a5ccc9c-0048-445f-b240-a4e9af18b94a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Collect",
                    "type": "Button",
                    "id": "aa84c321-1041-4c8e-a281-256f702881d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "6fab571a-c400-46d4-a384-62a800a4fc34",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player_Fishing",
                    "type": "Button",
                    "id": "91ae4b3b-6b36-4334-8d2e-670051229f0b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Cast",
                    "type": "Button",
                    "id": "57770573-4289-43e6-a692-819d1d699b59",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_FishingMinigame_Arrow_Up",
                    "type": "Button",
                    "id": "3bb38824-2f5c-41c5-b0cd-1bf9604db142",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_FishingMinigame_Arrow_Right",
                    "type": "Button",
                    "id": "7dbf2eee-d355-4c42-884f-977e851a0a19",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_FishingMinigame_Arrow_Down",
                    "type": "Button",
                    "id": "ce452295-ee11-4b3e-87ee-d5535e3d5999",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_FishingMinigame_Arrow_Left",
                    "type": "Button",
                    "id": "eec6de91-1441-4488-b37b-e4395c6a4398",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4c43a08-9703-41e6-9344-1885ab13657a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d6293b6-c915-4298-846e-a0c50f3d1c78",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0e8a353-a6bd-4862-bfdc-83d57bdfe973",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09b7e3e1-016e-49de-9a8c-051f07e6f96b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eabe0509-b871-4660-ae94-7cecf5c9ad55",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddeb5a45-5325-4e02-85df-ff74d9af82f7",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Collect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6097bbd3-075f-42b2-950d-0a2269ff3694",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "29a421b0-7d73-41e7-91ef-948d68f217a2",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Fishing",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "7eabd59e-ed55-4b1c-85cd-f3f1f123131f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Fishing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "72fd2aee-a033-492e-8319-01ed297eb08d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Fishing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "abce99c2-b01a-43dc-8162-e21b4ffbe71a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Cast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52bffa33-e893-419c-af6c-ace7382db0b2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_FishingMinigame_Arrow_Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf636853-85a6-468f-a405-0d5f387ebfe4",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_FishingMinigame_Arrow_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25d82f4d-90a9-4bef-b641-89e5b68ff897",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_FishingMinigame_Arrow_Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27de6bcc-252f-4d32-a64a-49cade95b534",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_FishingMinigame_Arrow_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "5bbfab05-3ddc-4418-bb0e-7d1f1cdda9e6",
            "actions": [
                {
                    "name": "UI_Inventory",
                    "type": "Button",
                    "id": "3228cdd6-7dac-4848-9353-78ca350883b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_Close",
                    "type": "Button",
                    "id": "993fb04a-a42f-445f-bfbd-bce823d13e19",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_Fishing_Minigame",
                    "type": "Button",
                    "id": "4b881e03-adf6-4124-8cd4-2b57168cb60b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "65977b2d-a65c-4af3-8d07-e245383d5278",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6123537e-fb42-4a5f-99d5-11fd8bf8575f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2d43718-ff4e-4666-b593-4d6792a24033",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_Fishing_Minigame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}